--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,5 +11,19 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Tailwind CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          primary: '#4CAF50',
+        },
+      },
+    },
+  }
+</script>
+
   </body>
 </html>
